# FJ71StreamCipher

./: .gitignore  CMakeLists.txt  README.md
doc/: README.md  todo.md
include/FJ71StreamCipher/: LFSR64Fib.h  README.md
lib/: CMakeLists.txt  LFSR64Fib.cpp  README.md
src/: README.md
test/: CMakeLists.txt  LFSRtest.cpp  README.md
